# yuh

./: .gitignore  CLAUDE.md  Dockerfile  GLM.md  INSTALL.md  README.md  config_example.json  docker-compose.yml  ecosystem.config.cjs  index.mjs  package-lock.json  package.json
commands/: balance.mjs  bandit.mjs  blackjack.mjs  coinflip.mjs  crash.mjs  daily.mjs  dice.mjs  fishslot.mjs  help.mjs  invest.mjs  leaderboard.mjs  mines.mjs  pay.mjs  pet.mjs  roulette.mjs  shop.mjs  slots.mjs  web.mjs  wildwest.mjs  work.mjs
deploy/: nginx-sirgreen.conf
games/: admin.html  arena.html  cards.html  case-battle.html  house.html  invest.html  leaderboard.html  lobby.html  login.html  misc.html  notifications.html  servers.html  settings.html  sir-bandit.html  slots.html  support.html
games/assets/css/: admin.css  app.css  arena.css  case-battle.css  house.css  login.css  settings.css  slots.css
games/assets/js/: sound.js
games/assets/sir-bandit/: camera_drum.webm  clover_activate.webm  fuming_3.webm  infuriated_1.webm  music_bonus_level_0.webm  music_level_1.webm  music_level_2.webm  (+3 more)
games/partials/: sidebar.html
scripts/: fluxer-bridge.js  migrate-to-stdb.mjs  patch-fishslot.js  setup-fishslot.sh
spacetimedb/: Cargo.toml  README.md
spacetimedb/src/: lib.rs
src/: AdminPanel.mjs  ArenaServer.mjs  CardGames.mjs  CaseBattle.mjs  CommandHandler.mjs  Database.mjs  FishslotAssets.mjs  GoldSlotAPI.mjs  HouseEdge.mjs  HouseGames.mjs  Settings.mjs  SlotEngine.mjs  Utils.mjs  WebServer.mjs  stdbBridge.mjs  theme.mjs
web/: package.json  server.ts
web/src/: stdb.ts
(+11 files in other folders)
